Remove code to find topmost X window in SetTransparent(). The purpose of this code is unknown, but it may be intended to make WM decorations transparent. But it causes a crash when docking an AUI panel. And in my testing the decorations are transparent even without this code. Fixes #4841

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@71275 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775